feat(core): update OpenApi Spec to neuste Stand und copyOfId Feld addiert
